Migrate GradleBuild to use Java NIO
Closes gh-59